fix: add timeouts on docker local-invoke, start-api and start-lambda integration tests (#1478)
* fix: add timeouts on docker local-invoke, start-api and start-lambda

- cause the builds to fail on appveyor rather than halting the test
  forever, resulting in a lengthy build timeout.

* fix: set timeout on all lambdas in integration functions to be 20s

* black: run make black

* appveyor: matrix rejigging

- removal of python2 matrix
- change to always activation of virtualenv on windows on every stage

* fix: set lambda timeout on integration tests to be 0.

- infinite timeout, but each of these tests has an individual timeout of
  300s

* fix: appveyor.yml matrix

* fix: timeouts to 600

- temporarily remove smoke tests on windows matrix

--- a/tests/integration/testdata/start_api/template.yaml
+++ b/tests/integration/testdata/start_api/template.yaml
@@ -17,6 +17,7 @@ Resources:
       Handler: main.handler
       Runtime: python3.6
       CodeUri: .
+      Timeout: 600
       Events:
         IdBasePath:
           Type: Api
@@ -42,6 +43,7 @@ Resources:
       Handler: main.echo_event_handler
       Runtime: python3.6
       CodeUri: .
+      Timeout: 600
       Events:
         PathWithPathParams:
           Type: Api
@@ -66,6 +68,7 @@ Resources:
     Properties:
       Handler: main.echo_event_handler_2
       Runtime: python3.6
+      Timeout: 600
       CodeUri: .
       Events:
         EchoEventBodyPath:
@@ -80,6 +83,7 @@ Resources:
       Handler: main.echo_integer_body
       Runtime: python3.6
       CodeUri: .
+      Timeout: 600
       Events:
         EchoEventBodyPath:
           Type: Api
@@ -93,6 +97,7 @@ Resources:
       Handler: main.content_type_setter_handler
       Runtime: python3.6
       CodeUri: .
+      Timeout: 600
       Events:
         ContentTypeSetter:
           Type: Api
@@ -106,6 +111,7 @@ Resources:
       Handler: main.only_set_status_code_handler
       Runtime: python3.6
       CodeUri: .
+      Timeout: 600
       Events:
         OnlySetStatusCodePath:
           Type: Api
@@ -119,6 +125,7 @@ Resources:
       Handler: main.only_set_body_handler
       Runtime: python3.6
       CodeUri: .
+      Timeout: 600
       Events:
         OnlySetBodyPath:
           Type: Api
@@ -132,6 +139,7 @@ Resources:
       Handler: main.string_status_code_handler
       Runtime: python3.6
       CodeUri: .
+      Timeout: 600
       Events:
         StringStatusCodePath:
           Type: Api
@@ -173,6 +181,7 @@ Resources:
       Handler: main.write_to_stderr
       Runtime: python3.6
       CodeUri: .
+      Timeout: 600
       Events:
         WriteToStderrPath:
           Type: Api
@@ -186,6 +195,7 @@ Resources:
       Handler: main.write_to_stdout
       Runtime: python3.6
       CodeUri: .
+      Timeout: 600
       Events:
         WriteToStdoutPath:
           Type: Api
@@ -199,6 +209,7 @@ Resources:
       Handler: main.invalid_response_returned
       Runtime: python3.6
       CodeUri: .
+      Timeout: 600
       Events:
         InvalidResponseReturned:
           Type: Api
@@ -212,6 +223,7 @@ Resources:
       Handler: main.invalid_hash_response
       Runtime: python3.6
       CodeUri: .
+      Timeout: 600
       Events:
         InvalidResponseReturned:
           Type: Api
@@ -225,6 +237,7 @@ Resources:
       Handler: main.base64_response
       Runtime: python3.6
       CodeUri: .
+      Timeout: 600
       Events:
         Base64ResponsePath:
           Type: Api
@@ -238,6 +251,7 @@ Resources:
       Handler: main.echo_base64_event_body
       Runtime: python3.6
       CodeUri: .
+      Timeout: 600
       Events:
         EchoBase64EventBodyPath:
           Type: Api
@@ -251,6 +265,7 @@ Resources:
       Handler: main.multiple_headers
       Runtime: python3.6
       CodeUri: .
+      Timeout: 600
       Events:
         IdBasePath:
           Type: Api
@@ -264,6 +279,7 @@ Resources:
       Handler: main.multiple_headers_overrides_headers
       Runtime: python3.6
       CodeUri: .
+      Timeout: 600
       Events:
         IdBasePath:
           Type: Api
