--- a/tests/integration/testdata/start_api/serverless-sample-output.yaml
+++ b/tests/integration/testdata/start_api/serverless-sample-output.yaml
@@ -60,6 +60,7 @@ Resources:
       FunctionName: serverless-hello-world-dev-helloWorld
       Handler: main.handler
       MemorySize: 1024
+      Timeout: 600
       Role:
         Fn::GetAtt:
           - IamRoleLambdaExecution
