fix: better comments, exception handling
- template can now be specified as `-t`, `--template-file` and
  `--template`. Future PR will standardize it across the codebase.
  Current commit aims to fix it only in `package` space.

- exception handling on passing an unknown profile name

- refactor catching of OSError within package_context.py

- New exception class for package failures.

--- a/appveyor-windows.yml
+++ b/appveyor-windows.yml
@@ -49,13 +49,14 @@ install:
     # Upgrade setuptools, wheel and virtualenv
     - "python -m pip install --upgrade setuptools wheel virtualenv"
 
+    # Install AWS CLI Globally via pip3
+    - "pip3 install awscli"
+
     # Create new virtual environment with chosen python version and activate it
     - "python -m virtualenv venv"
     - "venv\\Scripts\\activate"
     - "python --version"
 
-    # Install AWS CLI
-    - "pip install awscli"
     # Actually install SAM CLI's dependencies
     - "pip install -e \".[dev]\""
 
