--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,13 +37,14 @@ for:
       - "echo %PATH%"
       - "python -m pip install --upgrade setuptools wheel virtualenv"
 
+      # Install AWS CLI Globally outside of a venv.
+      - "pip3 install awscli"
+
       # Create new virtual environment and activate it
       - "rm -rf venv"
       - "python -m virtualenv venv"
       - "venv\\Scripts\\activate"
       - "python --version"
-      # Install AWS CLI
-      - "python -m pip install awscli"
 
     build_script:
       # Activate virtualenv again on windows
@@ -58,7 +59,7 @@ for:
       - "pylint --rcfile .pylintrc samcli"
 
       # Runs only in Linux
-      - sh: "pytest -vv tests/integration"
+      - sh: "pytest -vv -n 4 tests/integration"
       - sh: "/tmp/black --check setup.py tests samcli scripts"
       - sh: "python scripts/check-isolated-needs-update.py"
 
@@ -88,6 +89,11 @@ for:
       - sh: "wget -O /tmp/black https://github.com/python/black/releases/download/19.3b0/black"
       - sh: "chmod +x /tmp/black"
       - sh: "/tmp/black --version"
+
+      # Install AWS CLI
+      - sh: "virtualenv aws_cli"
+      - sh: "./aws_cli/bin/python -m pip install awscli"
+      - sh: "PATH=$(echo $PWD'/aws_cli/bin'):$PATH"
 
     build_script:
       - "python -c \"import sys; print(sys.executable)\""
