feat: Type hinting for for nodejs hello-world template
Adds type hints and autocomplete for context, and event parameters on the lambdaHandler.

Knowing what values exist in these parameters can be daunting, and usually require going to the links provided in the jsdoc. Having types here reduces that friction and keeps the developer in the editor.

--- a/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs/{{cookiecutter.project_name}}/hello-world/package.json
+++ b/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs/{{cookiecutter.project_name}}/hello-world/package.json
@@ -13,6 +13,7 @@
     "test": "mocha tests/unit/"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.34",
     "chai": "^4.2.0",
     "mocha": "^6.1.4"
   }
