feat: sam package without awscli pre-installed (#1437)
* feat: sam package without awscli pre-installed

- rely on boto3 instead
- port over code from aws cli

* tests: port artifact exporter unit tests

* tests: add package command unit tests

* refactor: package context class

- unit tests for package context class
- removal old `test_package.py`

* feat: s3 uploader changes

- add unit tests for s3 uploader

* refactor: sam package - artifact exporter

- refactor of the port from `aws-cli` for artifact exporter
- add unit tests for artifact exporter

* refactor: unit tests for `package context` class

* feat: sam package `click` wiring

- added unit tests for the click wiring

* tests: fix unit tests on windows

- fix for smoke tests

* tests: fixing temporary files usage for windows

- https://docs.python.org/3/library/tempfile.html

* refactor: cleanup package command

- remove unneeded variables
- remove unneeded exceptions, inherit package specific exceptions from
  UserException
- refactor resources and their respective properties enums to its own
  file. This file is cross-referenced across package and other commands.
- include jmespath as explicit dependency
- refactor unit tests as required based on code structure changes.

* fix: resources and property locations in `sam package` help text

Usage: samdev package [OPTIONS]

  The SAM package command creates a zip of your code and dependencies
and uploads it to S3. The command
  returns a copy of your template, replacing references to local
artifacts with the S3 location where the
  command uploaded the artifacts.

  The following resources and their property locations are supported.

  Resource : AWS::ServerlessRepo::Application | Location : LicenseUrl

  Resource : AWS::ServerlessRepo::Application | Location : ReadmeUrl

  Resource : AWS::Serverless::Function | Location : CodeUri

  Resource : AWS::Serverless::Api | Location : DefinitionUri

--- a/appveyor-windows.yml
+++ b/appveyor-windows.yml
@@ -49,6 +49,9 @@ install:
     # Upgrade setuptools, wheel and virtualenv
     - "python -m pip install --upgrade setuptools wheel virtualenv"
 
+    # Install AWS CLI Globally via pip3
+    - "pip install awscli"
+
     # Create new virtual environment with chosen python version and activate it
     - "python -m virtualenv venv"
     - "venv\\Scripts\\activate"
@@ -72,6 +75,7 @@ test_script:
     - "venv\\Scripts\\activate"
     - "docker system prune -a -f"
     - "pytest -vv tests/integration"
+    - "pytest -vv tests/regression"
 
 # Uncomment for RDP
 # on_finish:
