--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,6 +37,9 @@ for:
       - "echo %PATH%"
       - "python -m pip install --upgrade setuptools wheel virtualenv"
 
+      # Install AWS CLI Globally outside of a venv.
+      - "pip install awscli"
+
       # Create new virtual environment and activate it
       - "rm -rf venv"
       - "python -m virtualenv venv"
@@ -90,6 +93,11 @@ for:
       - sh: "chmod +x /tmp/black"
       - sh: "/tmp/black --version"
 
+      # Install AWS CLI
+      - sh: "virtualenv aws_cli"
+      - sh: "./aws_cli/bin/python -m pip install awscli"
+      - sh: "PATH=$(echo $PWD'/aws_cli/bin'):$PATH"
+
     build_script:
       - "python -c \"import sys; print(sys.executable)\""
       - "pip install -e \".[dev]\""
@@ -103,6 +111,7 @@ for:
 
       # Runs only in Linux
       - sh: "pytest -vv tests/integration"
+      - sh: "pytest -vv -n 4 tests/regression"
       - sh: "/tmp/black --check setup.py tests samcli scripts"
       - sh: "python scripts/check-isolated-needs-update.py"
 
