--- a/tests/integration/testdata/package/aws-serverless-function.yaml
+++ b/tests/integration/testdata/package/aws-serverless-function.yaml
@@ -2,6 +2,12 @@ AWSTemplateFormatVersion : '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: A hello world application.
 
+Parameters:
+  Parameter:
+    Type: String
+    Default: Sample
+    Description: A custom parameter
+
 Resources:
   HelloWorldFunction:
     Type: AWS::Serverless::Function
