fix: zip files were ignored by .gitignore
- `sam package` integration tests

--- a/tests/integration/testdata/package/aws-elasticbeanstalk-applicationversion.yaml
+++ b/tests/integration/testdata/package/aws-elasticbeanstalk-applicationversion.yaml
@@ -8,4 +8,4 @@ Resources:
     Properties:
       ApplicationName: "my app"
       Description: "my sample version"
-      SourceBundle: ./sample.zip
+      SourceBundle: ./sourcebundle.zip
