--- a/samcli/local/init/templates/cookiecutter-aws-sam-hello-python/{{cookiecutter.project_name}}/template.yaml
+++ b/samcli/local/init/templates/cookiecutter-aws-sam-hello-python/{{cookiecutter.project_name}}/template.yaml
@@ -16,13 +16,7 @@ Resources:
     Properties:
       CodeUri: hello_world/
       Handler: app.lambda_handler
-      {%- if cookiecutter.runtime == 'python2.7' %}
-      Runtime: python2.7
-      {%- elif cookiecutter.runtime == 'python3.6' %}
-      Runtime: python3.6
-      {%- else %}
-      Runtime: python3.7
-      {%- endif %}
+      Runtime: {{ cookiecutter.runtime }}
       Events:
         HelloWorld:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
