--- a/appveyor-windows-build-python.yml
+++ b/appveyor-windows-build-python.yml
@@ -38,7 +38,7 @@ install:
 
     # Make sure the temp directory exists for Python to use.
     - ps: "mkdir -Force D:\\tmp"
-    - "SET PATH=%PYTHON_HOME%;%PATH%"
+    - "SET PATH=%PYTHON_HOME%;%PATH%;C:\\Python37-x64;C:\\Python38-x64;C:\\Python27-x64"
     - "echo %PYTHON_HOME%"
     - "echo %PATH%"
     - "python --version"
