adding other python versions to end of PATH in linux

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,6 @@ environment:
       PYTHON_VERSION: '3.6.8'
       PYTHON_ARCH: '64'
       NOSE_PARAMETERIZED_NO_WARN: 1
-      OTHER_PYTHON_PATHS:
 
     - PYTHON_HOME: "C:\\Python37-x64"
       PYTHON_VERSION: '3.7.4'
@@ -109,6 +108,8 @@ for:
       - sh: "which python3.6"
       - sh: "which python3.7"
       - sh: "which python2.7"
+
+      - sh: "PATH=$PATH:/usr/bin/python3.8:/usr/bin/python3.7"
 
     build_script:
       - "python -c \"import sys; print(sys.executable)\""
