install pip in each python version

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -110,6 +110,10 @@ for:
       - sh: "which python2.7"
 
       - sh: "PATH=$PATH:/usr/bin/python3.8:/usr/bin/python3.7"
+      - sh: "curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py"
+
+      - sh: "python3.8 get-pip.py"
+      - sh: "python3.7 get-pip.py"
 
       - sh: "python3.8 -m pip freeze"
 
