--- a/appveyor.yml
+++ b/appveyor.yml
@@ -113,8 +113,8 @@ for:
       - sh: "curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py"
 
       - sh: "sudo apt-get -y install python3-distutils"
-      - sh: "python3.8 get-pip.py"
-      - sh: "python3.7 get-pip.py"
+      - sh: "python3.8 get-pip.py --user"
+      - sh: "python3.7 get-pip.py --user"
 
       - sh: "python3.8 -m pip freeze"
 
