--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,13 +13,14 @@ environment:
       PYTHON_VERSION: '3.6.8'
       PYTHON_ARCH: '64'
       NOSE_PARAMETERIZED_NO_WARN: 1
-      INSTALL_PY_37: 1
+      INSTALL_PY_37_PIP: 1
 
     - PYTHON_HOME: "C:\\Python37-x64"
       PYTHON_VERSION: '3.7.4'
       PYTHON_ARCH: '64'
       RUN_SMOKE: 1
       NOSE_PARAMETERIZED_NO_WARN: 1
+      INSTALL_PY_36_PIP: 1
 
 for:
   - 
@@ -115,7 +116,8 @@ for:
 
       - sh: "sudo apt-get -y install python3-distutils"
       - sh: "python3.8 get-pip.py --user"
-      - ps: "If ($env:INSTALL_PY_37) {python3.7 get-pip.py --user}"
+      - ps: "If ($env:INSTALL_PY_37_PIP) {python3.7 get-pip.py --user}"
+      - ps: "If ($env:INSTALL_PY_36_PIP) {python3.6 get-pip.py --user}"
 
     build_script:
       - "python -c \"import sys; print(sys.executable)\""
