try to make builds faster and format with black

--- a/appveyor-windows.yml
+++ b/appveyor-windows.yml
@@ -74,8 +74,8 @@ test_script:
     - "git --version"
     - "venv\\Scripts\\activate"
     - "docker system prune -a -f"
-    - "pytest -vv tests/integration"
-    - "pytest -vv tests/regression"
+    - "pytest -n 4 -vv tests/integration"
+    - "pytest -n 4 -vv tests/regression"
 
 # Uncomment for RDP
 # on_finish:
