--- a/appveyor-windows.yml
+++ b/appveyor-windows.yml
@@ -74,7 +74,7 @@ test_script:
     - "git --version"
     - "venv\\Scripts\\activate"
     - "docker system prune -a -f"
-    - "pytest -n 4 -vv tests/integration"
+    - "pytest -vv tests/integration"
     - "pytest -n 4 -vv tests/regression"
 
 # Uncomment for RDP
