--- a/appveyor-windows-build-java-inprocess.yml
+++ b/appveyor-windows-build-java-inprocess.yml
@@ -23,11 +23,11 @@ install:
     - "python --version"
 
     # Upgrade setuptools, wheel and virtualenv
-    - "python -m pip install --upgrade setuptools wheel virtualenv"
+    - "python -m pip install --upgrade setuptools wheel"
 
     # Create new virtual environment with chosen python version and activate it
-    - "python -m virtualenv venv"
-    - "venv\\Scripts\\activate"
+    - "python -m venv venv"
+    - "venv\\Scripts\\activate.bat"
     - "python --version"
 
     # Actually install SAM CLI's dependencies
@@ -57,7 +57,7 @@ install:
 
 test_script:
     # Reactivate virtualenv before running tests
-    - "venv\\Scripts\\activate"
+    - "venv\\Scripts\\activate.bat"
     - "pytest -vv tests/integration/buildcmd/test_build_cmd.py -k test_building_java8_in_process"
     - "SET JAVA_HOME=C:\\Program Files\\Java\\jdk11"
     - "pytest -vv tests/integration/buildcmd/test_build_cmd.py -k test_building_java11_in_process"
