--- a/appveyor-windows-build-java-ruby-inprocess.yml
+++ b/appveyor-windows-build-java-ruby-inprocess.yml
@@ -17,22 +17,6 @@ environment:
 
 install:
 
-    - "SET PATH=%PYTHON_HOME%;%PATH%"
-    - "echo %PYTHON_HOME%"
-    - "echo %PATH%"
-    - "python --version"
-
-    # Upgrade setuptools, wheel and virtualenv
-    - "python -m pip install --upgrade setuptools wheel virtualenv"
-
-    # Create new virtual environment with chosen python version and activate it
-    - "python -m virtualenv venv"
-    - "venv\\Scripts\\activate"
-    - "python --version"
-
-    # Actually install SAM CLI's dependencies
-    - "pip install -e \".[dev]\""
-
     # setup Java, Maven and Gradle
     - "refreshenv"
     - "choco install maven -y --force"
@@ -52,9 +36,22 @@ install:
     # Echo final Path
     - "echo %PATH%"
 
+    # validate ssl works with ruby
+    - "ruby -ropen-uri -e 'eval open(\"https://git.io/vQhWq\").read'"
+
+    - "set PATH=%PYTHON_HOME%;%PYTHON_HOME%\\Scripts;%PYTHON_HOME%\\bin;%PATH%"
+    - "echo %PYTHON_HOME%"
+    - "echo %PATH%"
+    - "python --version"
+
+    # Actually install SAM CLI's dependencies
+    - "pip install -e \".[dev]\""
+
 test_script:
     # Reactivate virtualenv before running tests
-    - "venv\\Scripts\\activate"
     - "pytest -vv tests/integration/buildcmd/test_build_cmd.py -k test_building_java8_in_process"
     - "SET JAVA_HOME=C:\\Program Files\\Java\\jdk11"
     - "pytest -vv tests/integration/buildcmd/test_build_cmd.py -k test_building_java11_in_process"
+
+    # Run Ruby in-process builds
+    - "pytest -vv tests/integration/buildcmd/test_build_cmd.py -k test_building_ruby_in_process"
