--- a/appveyor-windows-build-python.yml
+++ b/appveyor-windows-build-python.yml
@@ -38,6 +38,7 @@ install:
 
     # Make sure the temp directory exists for Python to use.
     # Install python3.8
+    - "choco install chocolatey-core.extension --version 1.3.3 --force -y"
     - "choco install python3 --version 3.8.0"
     - "C:\\Python38\\python.exe -m pip freeze"
     - "refreshenv"
