--- a/appveyor-windows-build-ruby.yml
+++ b/appveyor-windows-build-ruby.yml
@@ -55,6 +55,7 @@ install:
     - "pip install -e \".[dev]\""
 
     # setup Ruby
+    - "choco install chocolatey-core.extension --version 1.3.3 --force -y"
     - "choco install ruby --version 2.5.3.1 --force -y"
     - "refreshenv"
     - "ruby --version"
