--- a/appveyor-windows-build-nodejs.yml
+++ b/appveyor-windows-build-nodejs.yml
@@ -56,7 +56,7 @@ install:
 
 
     # To run Nodejs workflow integ tests
-    - "choco install nodejs-lts -y --force"
+    - "choco install nodejs-lts -y --version=10.16.3"
     - "refreshenv"
 
 
