--- a/appveyor.yml
+++ b/appveyor.yml
@@ -59,9 +59,7 @@ for:
       - "venv\\Scripts\\activate"
       - "pytest --cov samcli --cov-report term-missing --cov-fail-under 95 tests/unit"
       - "pylint --rcfile .pylintrc samcli"
-      # There are some functional tests that are currently broken due to not being updated with changed code or still running with node4.3 runtimes
-      # We need to update those but this allows us to at least runs the ones we currently have working
-      - "pytest -n 4 tests/functional/commands/validate tests/functional/commands/cli/test_global_config.py"
+      - "pytest -n 4 tests/functional"
 
   - 
     matrix:
@@ -115,9 +113,7 @@ for:
     test_script:
       - "pytest --cov samcli --cov-report term-missing --cov-fail-under 95 tests/unit"
       - "pylint --rcfile .pylintrc samcli"
-      # There are some functional tests that are currently broken due to not being updated with changed code or still running with node4.3 runtimes
-      # We need to update those but this allows us to at least runs the ones we currently have working
-      - "pytest -n 4 tests/functional/commands/validate tests/functional/commands/cli/test_global_config.py"
+      - "pytest -n 4 tests/functional"
 
       # Runs only in Linux
       - sh: "pytest -vv tests/integration"
